--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,17 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+
+<% if user_signed_in? %>
+
+  <p>Vos données en tant qu'associé dans une société :</p>
+
+  <p>Vos données en tant qu'investisseur: </p>
+
+<% else %>
+
+  <p>Doit afficher la Landing page des users non sign-in/up </p>
+
+<% end %>
+
+
