--- a/app/views/operations/show.html.erb
+++ b/app/views/operations/show.html.erb
@@ -1,4 +1,4 @@
-<h2>Voici les infos relatives à l'opération <%= @operation.id %></h2>
+<h2>Voici les infos relatives à l'opération <%= @operation.name %></h2>
 
 
 <%= link_to 'Retour à la liste des opérations', company_operations_path(@operation.company.id) %>
