--- a/app/views/operations/new.html.erb
+++ b/app/views/operations/new.html.erb
@@ -2,12 +2,6 @@
 
 
 <%= simple_form_for [@company, @operation] do |f| %>
+  <%= f.input :name, label: 'Donnez un nom à cette opération'  %>
   <%= f.input :category, collection: ['Levée de fonds', 'BSPCE', 'AGA', 'BSA'], label: 'Quelle opération ?' %>
-  <%= f.input :target_amount_cents, label: 'Quel est le montant visé ?' %>
-  <%= f.input :expected_closing_date, label: 'Quelle est la date de cloture envisagée ?' %>
-  <%= f.button :submit %>
-  <%= link_to 'Cancel', company_operations_path(@company.id) %>
 <% end %>
-
-
-   <!-- f.input :name, label: 'Donnez un nom à cette opération' -->
