--- a/app/views/operations/index.html.erb
+++ b/app/views/operations/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
   <% @operations.each do |operation| %>
-    <li>Catégorie :<%= operation.category %> || Montant espéré : <%= operation.target_amount_cents %> || Date de clôture envisagée : <%= operation.expected_closing_date %></li>
+    <li>Catégorie :<%= operation.category %> || Montant espéré : <%= operation.target_amount_cents %> || Date de clôture envisagée : <%= operation.expected_closing_date %> || <%= link_to 'Détails', operation_path(operation.id) %> </li>
   <% end %>
 </ul>
 
