--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -4,40 +4,40 @@
 <form action="/companies" method="post">
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
    <div>
-    <label for="siren">SIREN (sans espace): </label>
+    <label for="siren">SIREN (sans espace) </label>
     <input type="string" name="company[siren]" id="company-siren-field">
   </div>
   <div id='card-result-api-siren'>
     <div>
-      <label for="name">Nom : </label>
+      <label for="name">Nom  </label>
       <input type="string" name="company[name]" id="company-name-field">
     </div>
     <div>
-      <label for="address">Adresse : </label>
+      <label for="address">Adresse  </label>
       <input type="string" name="company[address]" id="company-address-field">
     </div>
     <div>
-      <label for="legal_form">Forme sociale : </label>
+      <label for="legal_form">Forme sociale  </label>
       <input type="string" name="company[legal_form]" id="company-legal-form-field">
     </div>
     <div>
-      <label for="creation_date">Date de début d'activité de la société : </label>
+      <label for="creation_date">Date d'immatriculation de la société </label>
       <input type="string" name="company[creation_date]" id="company-creation-date-field">
     </div>
      <div>
-      <label for="fiscal_date">Date de cloture de l'exercice social :</label>
-      <input type="date" name="company[fiscal_date]" id="company-fiscal-date-field">
+      <label for="fiscal_date">Date de cloture de l'exercice social </label>
+      <input type="string" name="company[fiscal_date]" id="company-fiscal-date-field">
     </div>
     <div>
-      <label for="number_of_shares">Nombre d'actions initial : </label>
+      <label for="number_of_shares">Nombre d'actions initial  </label>
       <input type="integer" name="company[number_of_shares]" id="number_of_shares">
     </div>
     <div>
-      <label for="share_nominal_value_cents">Valeur nominale de l'action : </label>
+      <label for="share_nominal_value_cents">Valeur nominale de l'action </label>
       <input type="integer" name="company[share_nominal_value_cents]" id="share_nominal_value_cents">
     </div>
     <div>
-      <label for="share_nominal_value_currency">Monnaie devise : </label>
+      <label for="share_nominal_value_currency">Monnaie devise </label>
       <input type="string" name="company[share_nominal_value_currency]" id="share_nominal_value_currency">
     </div>
   </div>
