--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,10 +1,10 @@
 <div class="wrapper">
   <div class="sc-banner" style="background-image: linear-gradient(-225deg, rgba(156, 149, 149, 0.3) 0%, rgba(51, 63, 43, 0.3) 70%), url(<%= asset_path "background.jpg" %>);">
     <div class="banner-content">
-      <h1>LMD</h1>
+      <h1>Superclosing</h1>
       <p>Simplifiez votre levée de fonds</p>
-      <%= link_to new_user_session_path do %>
-        <button type="button" class="btn-rocket">Inscrivez-vous</button>
+      <%= link_to new_user_registration_path do %>
+        <button type="button" class="btn btn-success">Lancez-vous</button>
       <% end %>
     </div>
   </div>
