new layout with sidebar

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,12 +1,11 @@
+<div class='company-show-container'>
 
-<div class='container'>
   <div class='company-banner-container'>
     <h1>Voici la show de la compagnie</h1>
     <h2><%= @company.name %></h2>
   </div>
 
-  <div class='company-content-container' style='display: flex'>
-
+  <div class='company-content-container'>
     <div>
       <h3>Infos</h3>
        <p> Nom : </p> <%= @company.name %>
@@ -27,6 +26,7 @@
     <div>
       <h3>Actionnariat</h3>
     </div>
+
   </div>
 </div>
 
