--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,10 +25,7 @@
     <% end %>
   </ul>
 
-  <p>
-  <%= link_to "ou créez une nouvelle société", new_company_path%> </p>
+  <p><%= link_to "ou créez une nouvelle société", new_company_path%> </p>
 
-</p>
 <% end %>
-
 
