--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="form-container">
   <div class="row">
-    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
       <div class="form-signup">
 
         <h2>Mettre à jour <%= resource_name.to_s.humanize %></h2>
@@ -16,28 +16,29 @@
             <% end %>
 
             <%= f.input :password,
-                        hint: "leave it blank if you don't want to change it",
+                        hint: "À laisser vide s'il ne change pas",
+                        label: "Nouveau mot de passe",
                         required: false,
                         input_html: { autocomplete: "new-password" } %>
             <%= f.input :password_confirmation,
+                        label: "Nouveau mot de passe",
                         required: false,
                         input_html: { autocomplete: "new-password" } %>
             <%= f.input :current_password,
-                        hint: "we need your current password to confirm your changes",
+                        label: "Mot de passe actuel",
+                        hint: "Nous en avons besoin pour valider les modifications",
                         required: true,
                         input_html: { autocomplete: "current-password" } %>
           </div>
 
           <div class="form-actions">
-            <%= f.button :submit, "Update" %>
+            <%= f.button :submit, "Mettre à jour" %>
           </div>
         <% end %>
 
-        <h3>Cancel my account</h3>
+        <p> Pas content ? <%= link_to "Supprimer votre compte", registration_path(resource_name), data: { confirm: "Êtes-vous sûr ?" }, method: :delete %></p>
 
-        <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-        <%= link_to "Back", :back %>
+        <%= link_to "Retour", :back %>
       </div>
     </div>
   </div>
