--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Enregistrer une nouvelle société</h2>
+<h2>Enregistrer une société</h2>
 
 <form action="/companies" method="post">
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
