--- a/app/views/operations/show.html.erb
+++ b/app/views/operations/show.html.erb
@@ -1,11 +1,11 @@
-<h2>Voici les infos relatives à l'opération <%= @operation.name %></h2>
+<h2>Opération <%= @operation.name %></h2>
 
 <h3>RESUME DE L'OPERATION</h3>
 <ul>
   <li>Type : <%= @operation.category %></li>
   <li>Statut : <%= @operation.status %></li>
+  <li>Montant : <%= @operation.target_amount_cents%> euros</li>
   <li>Date de fin : <%= @operation.expected_closing_date%></li>
-  <li>Valorisation : <%= @operation.target_amount_cents%><%= @operation.target_amount_currency%></li>
 </ul>
 
 <h3>LE TOUR DE TABLE</h3>
@@ -15,8 +15,7 @@
   <% end %>
 </ul>
 
-<p>Ajouter un nouvel investisseur ?(modale à créer)</p>
-
+<p>Ajouter un nouvel investisseur ? (modale à créer)</p>
 
 
 <h3>LA CAPTABLE</h3>
@@ -31,7 +30,7 @@
 
 <hr>
 <h3>LANCER LE CLOSING ?</h3>
-<p>Pour lancer le closing, assurez-vous que tous les investisseurs soient renseignés et que votre page personnelle soit remplie à 100%.</p>
+<p>Pour lancer le closing, assurez-vous que tous les investisseurs sont renseignés et que votre page personnelle est remplie à 100%.</p>
 
 
 <hr>
