api mise a jour

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -9,7 +9,7 @@
       <h3>Infos</h3>
        <p> Nom :  <%= @company.name %> </p>
        <p> Forme sociale : <%= @company.legal_form %> </p>
-       <p> Adresse :  <%= @company.address %></p>
+       <p> Siège social :  <%= @company.address %></p>
        <p> <%= link_to 'Modifier', edit_company_path(@company.id) %> </p>
     </div>
 
