--- a/app/views/operations/show.html.erb
+++ b/app/views/operations/show.html.erb
@@ -30,8 +30,24 @@
 
 <p>Total des investissements :  (faire la somme)</p>
 
+<hr>
+
+<h3>TEMPLATES DISPONIBLES</h3>
+<div style='display: flex, padding: 15px;'>
+  <%= cl_image_tag("superclosing/bs_template",
+      width: 100, height: 150, crop: :fill) %>
+  <%= cl_image_tag("superclosing/opening_age_pv",
+      width: 100, height: 150, crop: :fill) %>
+  <%= cl_image_tag("superclosing/opening_age_presence",
+      width: 100, height: 150, crop: :fill) %>
+  <%= cl_image_tag("superclosing/dps_suppression",
+      width: 100, height: 150, crop: :fill) %>
+</div>
+
+
 
 <hr>
+
 <h3>LANCER LE CLOSING ?</h3>
 <p>Pour lancer le closing, assurez-vous que tous les investisseurs sont renseignés et que votre page personnelle est remplie à 100%.</p>
 
