--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
       <div class="form-signup">
 
-        <h2>Mettre à jour <%= resource_name.to_s.humanize %></h2>
+        <h2><%= current_user.first_name %>, complétez votre profil </h2>
 
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
           <%= f.error_notification %>
@@ -15,12 +15,17 @@
               <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
             <% end %>
 
+            <%= f.input :gender, collection: ["M.", "Mme"], label: ""  %>
+            <%= f.input :first_name, label: "Prénom" %>
+            <%= f.input :last_name, label: "Nom de famille"  %>
+            <%= f.input :address, label: "Adresse"  %>
+            <%= f.input :birthday, label: "Date de naissance"%>
+            <%= f.input :birth_place, label: "Lieu de naissance"%>
+            <%= f.input :photo_url, as: :file, label: "Photo" %>
+            <%= f.input :photo_url_cache, as: :hidden %>
+
             <%= f.input :password,
                         hint: "À laisser vide s'il ne change pas",
-                        label: "Nouveau mot de passe",
-                        required: false,
-                        input_html: { autocomplete: "new-password" } %>
-            <%= f.input :password_confirmation,
                         label: "Nouveau mot de passe",
                         required: false,
                         input_html: { autocomplete: "new-password" } %>
