--- a/app/views/operations/show.html.erb
+++ b/app/views/operations/show.html.erb
@@ -5,6 +5,7 @@
   <li>Type : <%= @operation.category %></li>
   <li>Statut : <%= @operation.status %></li>
   <li>Montant : <%= @operation.target_amount_cents%> euros</li>
+  <li>Montant : <%= @operation.premoney_cents%> euros</li>
   <li>Date de fin : <%= @operation.expected_closing_date%></li>
 </ul>
 
@@ -25,7 +26,7 @@
 
 <p>Répartition Cible :</p>
 
-<canvas id="myChart" width="40" height="40" data-share="<%= @operation.premoney_cents %> - <%= @operation.target_amount_cents %>">
+<canvas id="myChart" data-share="<%= @operation.target_amount_cents %>-<%= @operation.premoney_cents %> ">
 </canvas>
 
 
