--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -9,3 +9,17 @@
   background: $red;
   color: white;
 }
+
+.btn-add-company {
+  width:120px;
+  height: 120px;
+  background: white;
+  border-radius:5px;
+  border: solid 1px black;
+  white-space:normal;
+  text-align:center;
+  color: black;
+  a {
+    text-decoration: none;
+  }
+}
