--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,36 @@
-// Specific CSS for your home-page
+.company-container-cards {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 30px;
+}
+.company-card {
+  flex: 0 0 auto;
+  // align-items: center;
+  padding: 20px 20px;
+  border-radius: 3px;
+  transition: all 0.15s ease;
+  font-weight: lighter;
+  font-size: 16px;
+  margin-top: 0;
+  margin: 0px 16px;
+  text-align: center;
+  a {
+    text-decoration: none;
+    color: black;
+  }
+}
+
+/* Product image */
+.product-image {
+  border-radius: 5px;
+  margin-right: 20px;
+}
+
+/* Hover effects */
+.company-card:hover {
+  background: #f7f7fa;
+  cursor: pointer;
+}
+.company-card:hover {
+  color: #E6E6E6;
+}
