--- a/app/assets/stylesheets/components/_charts.scss
+++ b/app/assets/stylesheets/components/_charts.scss
@@ -1,23 +1,22 @@
 #myChart {
-  height: 300px !important;
-  width: 600px !important;
+  height: 200px !important;
+  width: 400px !important;
 }
 
 #mySecondChart {
-  height: 300px !important;
-  width: 300px !important;
+  height: 200px !important;
+  width: 200px !important;
 }
 
 
 
 .indicateurs {
   display: flex;
-  border: solid 2px #fc9600;
-  background-color: #eaeaea;
+  // border: solid 2px #fc9600;
+  // background-color: #eaeaea;
   border-radius: 8px;
-  box-shadow: 1px 1px 1px #fc9600;
+  // box-shadow: 1px 1px 1px #fc9600;
   justify-content: space-between;
-  flex: 20% 80% 20%;
   margin: 1px;
   padding: 4px 8px;
   flex-direction: column;
