logo un peu mis en forme

--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -12,6 +12,12 @@
   color: #ffffffab;
   text-decoration: none;
 }
+#superclosing-logo{
+  max-width: 200px;
+  position: relative;
+  left: 10px;
+  bottom: 7px;
+}
 .sidebar > a {
   font-size: 24px;
   margin-left: 20px;
