--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div class="sidebar">
   <!-- Logo -->
-  <%= link_to "SuperClosing", root_path, class: "sidebar-superclosing-brand" %>
+  <%= image_tag "logo.png", id: "superclosing-logo" %>
 
   <ul class="sidebar-nav">
 
