--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,33 +2,33 @@
   <!-- Logo -->
   <%= link_to "SuperClosing", root_path, class: "sidebar-superclosing-brand" %>
 
-  <ul class="sidebar-nav">
+  <div class="sidebar-nav">
 
-    <li class="sidebar-item">
+    <div class="sidebar-item">
       <%= link_to root_path, class: "sidebar-link" do %>
         <i class="fas fa-columns"></i> Dashboard
       <% end %>
-    </li>
+    </div>
 
-    <li class="sidebar-item">
+    <div class="sidebar-item">
       <%= link_to root_path, class: "sidebar-link" do %>
         <i class="fas fa-chart-pie"></i> Cap Table
       <% end %>
-    </li>
+    </div>
 
 
-    <li class="sidebar-item">
+    <div class="sidebar-item">
       <%= link_to root_path, class: "sidebar-link" do %>
         <i class="fas fa-rocket"></i> Opérations
       <% end %>
-    </li>
+    </div>
 
-    <li class="sidebar-item">
+    <div class="sidebar-item">
       <%= link_to root_path, class: "sidebar-link" do %>
         <i class="far fa-calendar-alt"></i> Agenda
       <% end %>
-    </li>
+    </div>
+  </div>
 
-  </ul>
 </div>
 
