--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -37,6 +37,8 @@
   border-radius: 6px;
   box-shadow: 1px 1px 3px rgba(50, 50, 50, 0.4);
   opacity: 1;
+  position: relative;
+  bottom: 24px;
 }
 
 .btn-landing-signup:hover {
