--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -1,14 +1,13 @@
-
-.signup {
+.signin {
   position: absolute;
   top: 20px;
   right: 80px;
+}
 
 body {
   margin: 0;
   padding:0px;
 }
-
 .sc-banner {
   height: 100vh;
   background-size: cover;
@@ -16,15 +15,12 @@ body {
   text-align: center;
 }
 #superclosing-landing-logo{
-  width: 600px;
+  width: 700px;
   margin-top: 150px;
 }
 .banner-content{
-  p {
-    font-size: 40px;
-  }
+  min-height: 60vh;
 }
-
 
 .banner-features {
   display: flex;
@@ -40,7 +36,7 @@ body {
   border-radius: 4px;
   i {
     font-size:50px;
-    color: #FDBB58;
+    color: #ffac30;
   }
   h5 {
     font-size:20px;
@@ -52,12 +48,4 @@ body {
     font-size: 16px;
     font-weight: normal;
   }
-}
-.btn-landing-login{
-  position: absolute;
-  top: 30px;
-  right: 30px;
-  text-decoration: none;
-  border: 1px solid #FDBB58;
-  color: #FDBB58;
 }
