il faudra peut être améliorer la lisibilisté

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -25,19 +25,25 @@
       <div class="sc-landing-feature">
         <i class="fas fa-compass"></i>
         <h5>Simplifiez votre levée de fonds</h5>
-        <p> Nous vous accompagnons étape par étape dans votre levée. <br> Chaque étape expliquée et détaillée, tous les documents adaptés à votre situation.</p>
+        <div class='landing-inner-text'>
+          Nous vous accompagnons étape par étape dans votre levée. <br> Chaque étape expliquée et détaillée, tous les documents adaptés à votre situation.
+        </div>
       </div>
 
       <div class="sc-landing-feature">
         <i class="fas fa-clipboard-check"></i>
         <h5>Un processus unifié et centralisé </h5>
-        <p>Une documentation juridique unique, un partage d’information transparent avec vos investisseurs, une information toujours à jour.</p>
+        <div class='landing-inner-text'>
+          Une documentation juridique unique, un partage d’information transparent avec vos investisseurs, une information toujours à jour.
+        </div>
       </div>
 
       <div class="sc-landing-feature">
         <i class="fas fa-tachometer-alt"></i>
         <h5>Moins cher et plus rapide</h5>
-        <p>Toutes les étapes sont gérées par votre outil, pas de recours à des prestataires externes générant coûts et complexité.</p>
+        <div class='landing-inner-text'>
+          Toutes les étapes sont gérées par votre outil, pas de recours à des prestataires externes générant coûts et complexité.
+        </div>
       </div>
 
     </div>
