--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -16,15 +16,12 @@ body {
 }
 #superclosing-landing-logo{
   width: 700px;
-  margin-top: 150px;
+  margin-top: 120px;
 }
-.banner-content{
-  min-height: 60vh;
-}
-
 .banner-features {
   display: flex;
   justify-content: space-evenly;
+  margin-top: 30px;
 }
 
 .sc-landing-feature {
@@ -34,18 +31,17 @@ body {
   max-height: 400px;
   background: #b5aa9a4d;
   border-radius: 4px;
+
   i {
     font-size:50px;
     color: #ffac30;
   }
   h5 {
-    font-size:20px;
+    font-size:24px;
     margin: 8px;
   }
-  p {
-    margin: 0px;
-    padding: 0px;
-    font-size: 16px;
-    font-weight: normal;
-  }
+}
+.landing-inner-text{
+  padding: 8px;
+  height:160px;
 }
